--- a/src/components/Subreddit/AboutCommunity/styles.scss
+++ b/src/components/Subreddit/AboutCommunity/styles.scss
@@ -27,7 +27,9 @@
 .aboutCommunity__createButton {
   width: 90%;
   height: 30px;
-  background-color: black;
+  background-color: rgb(74, 190, 236);
+  border-color: rgb(74, 190, 236);
+  outline-color: rgb(74, 190, 236);
   color: white;
   font-weight: bolder;
   border-radius: 20px;
