Made some changes to subreddit header and added routing for home page

--- a/src/components/Posts/ShowPosts/styles.scss
+++ b/src/components/Posts/ShowPosts/styles.scss
@@ -4,9 +4,12 @@
 }
 .postsTab {
   background-color: white;
-  color: blue;
+  color: gray;
   display: flex;
   padding: 10px;
+}
+.poststab:active {
+  color: blue;
 }
 .postsTab__first {
   display: flex;
