--- a/src/components/Trending/Hot/styles.scss
+++ b/src/components/Trending/Hot/styles.scss
@@ -8,7 +8,7 @@
   color: white;
   width: 310px;
   margin-top: 20px;
-  align-items: center;
+  padding-top: 4px;
   font-size: 17px;
   padding-right: 5px;
 }
@@ -16,6 +16,8 @@
   height: 72px;
   object-fit: contain;
   margin-right: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .trendingHot__names {
   display: grid;
@@ -38,4 +40,7 @@
 }
 .trendingHot__text {
   padding-top: 10px;
+}
+.trendingHot__imgDiv {
+  margin: 0px;
 }
